Fix map visibility

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,4 @@
-.map {
+#root, main, .map {
   width: 100%;
   height: 100%;
 }
