--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,20 @@
-body {
+/* 
+
+.color-primary-0 { color: #1E4C41 }
+.color-primary-1 { color: #4B7A6E }
+.color-primary-2 { color: #326055 }
+.color-primary-3 { color: #0F3B30 }
+.color-primary-4 { color: #04261D }
+
+.rgba-primary-0 { color: rgba( 30, 76, 65,1) }
+.rgba-primary-1 { color: rgba( 75,122,110,1) }
+.rgba-primary-2 { color: rgba( 50, 96, 85,1) }
+.rgba-primary-3 { color: rgba( 15, 59, 48,1) }
+.rgba-primary-4 { color: rgba(  4, 38, 29,1) }
+
+*/
+
+html, body {
 	width: 100%;
 	height: 100%;
 	margin: 0;
